Home/Home_style.css
/* ... */
.latestEp_cardDet .latestEp_cardTitleBox
{
    width: 100%;
    display: flex;
    flex-direction: column;
    gap: 3px;
}

.latestEp_cardTitleBox .latestEp_cardTitle
{
    font-size: 13px;
    color: #dddddd;
}

.latestEp_cardTitleBox .latestEp_cardSubTitle
{
    font-size: 12px;
    color: #888888;
}

.latestEp_cardDet .latestEp_cardPostBox
{
    width: 100%;
    display: flex;
    justify-content: end;
}

.latestEp_cardPostBox .latestEp_cardPost
{
    font-size: 11px;
    color: #828282;
}

.latestEp_btn
{
    width: 100%;
    padding: 10px;
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 13px;
    text-align: center;
    border-radius: 5px;
    -moz-user-select: none;
    -moz-user-select: -moz-none;
    -webkit-user-select: none;
    -webkit-user-drag: none;
    user-select: none;
    cursor: pointer;
}

.latestEp_btn.inactive
{
    display: none;
}





/* ========= NEWS ======== */

.news_grid .news_gridSect
{
    width: 100%;
}

.news_gridSect .news_Ctnt
{
    width: 100%;
    display: grid;
    grid-template-columns: 100%;
    grid-template-rows: auto;
    justify-items: center;
    gap: 15px;
}

.news_Ctnt .news_card
{
    width: 100%;
    height: 120px;
    display: flex;
    flex-direction: row;
    gap: 10px;
    border-radius: 5px;
    transition: 300ms ease;
    overflow: hidden;
    cursor: pointer;
}

.news_card:active
{
    background-color: #000000cf;
}

.news_card .news_cardImgBox
{
    position: relative;
    width: 200px;
    height: 100%;
    overflow: hidden;
}

.news_cardImgBox .news_cardImg
{
    width: 100%;
    height: 100%;
    aspect-ratio: 3/4;
    object-position: center;
}

.news_card .news_cardDet
{
    width: calc(100% - 200px);
    display: flex;
    flex-direction: column;
    gap: 10px;
    padding: 10px;
}

.news_cardDet .news_cardTitleBox,
.news_cardDet .news_cardPostBox
{
    width: 100%;
}

.news_cardTitleBox .news_cardTitle
{
    font-size: 15px;
    color: #dddddd;
    letter-spacing: 0.5px;
}

.news_cardPostBox .news_cardPost
{
    font-family: 'Poppins' , sans-serif;
    font-size: 12px;
    color: #aaaaaa;
}





/* =========== Most Viewed Shows ============= */

.mostViewedCategoryBox
{
    display: flex;
    flex-direction: row;
    gap: 3px;
    padding: 5px;
    border-radius: 10px;
    background-color: #333333;
}

.mostViewedCategoryBox .mostViewedCategoryItem
{
    font-family: 'Poppins' , sans-serif;
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    padding: 5px 7px;
    color: var(--genWhiteTypeMid);
    font-size: 14px;
    border-radius: 10px;
    transition: all 150ms ease-in-out;
    cursor: pointer;
}

.mostViewedCategoryItem.active
{
    color: var(--genWhiteTypeLight) !important;
    background-color: var(--genGreenTypeMid) !important;
}

.mostViewedCategoryItem:active
{
    background-color: #444444;
}

.mostViewedBox .mostViewedRankBdr
{
    width: 100%;
    height: 400px;
}

.mostViewedRankBdr .mostViewedRankBox
{
    width: 100%;
    height: 100%;
    display: flex;
    flex-direction: row;
}

.mostViewedRankBox .mostViewedRankNo1Bdr
{
    width: calc(100% - var(--mostViewedRankOthersBdrWidth));
    height: 100%;
    border-radius: 10px;
    overflow: hidden;
    transition: all 300ms ease-in-out;
}

.mostViewedRankNo1Bdr .mostViewedRankNo1Box
{
    position: relative;
    width: 100%;
    height: 100%;
}

.mostViewedRankNo1Box .mostViewedRankNo1ImgBdr
{
    width: 100%;
    height: 100%;
}

.mostViewedRankNo1ImgBdr .mostViewedRankNo1ImgBox
{
    width: 100%;
    height: 100%;
    overflow: hidden;
}

.mostViewedRankNo1ImgBox .mostViewedRankNo1Img
{
    width: 100%;
    height: 100%;
    min-width: 100%;
    min-height: 100%;
    max-width: 100%;
    max-height: 100%;
    object-position: center;
    object-fit: cover;
}

.mostViewedRankNo1Box .mostViewedRankNo1DetBdr
{
    position: absolute;
    bottom: 0;
    left: 0;
    right: 0;
    width: 100%;
    height: 80px;
    background-color: #000000b2;
}

.mostViewedRankNo1DetBdr .mostViewedRankNo1DetBox
{
    width: 100%;
    height: 100%;
    display: flex;
    flex-direction: row;
    align-items: center;
}

.mostViewedRankNo1DetBox .mostViewedRankNo1SignBdr
{
    height: 100%;
    padding: 15px;
}

.mostViewedRankNo1SignBdr .mostViewedRankNo1SignBox
{
    height: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 0 15px;
    border-radius: 10px;
    background-color: var(--genGreenTypeMid);
}

.mostViewedRankNo1SignBox .mostViewedRankNo1SignText
{
    color: var(--genWhiteTypeLight);
    font-size: 18px;
    letter-spacing: 2px;
}

.mostViewedRankDetBdr .mostViewedRankDetBox
{
    display: flex;
    flex-direction: column;
}

.mostViewedRankDetBox .mostViewedRankDetTitleBox
{
    width: 100%;
}

.mostViewedRankDetTitleBox .mostViewedRankDetTitleText
{
    --mostViewedRankDetTitleTextNo: 1;
    --mostViewedRankDetTitleTextH: 1.4;
    position: relative;
    -webkit-line-clamp: var(--mostViewedRankDetTitleTextNo);
    -webkit-box-orient: vertical;
    line-clamp: var(--mostViewedRankDetTitleTextNo);
    display: -webkit-box;
    max-height: calc(var(--mostViewedRankDetTitleTextNo) * 1em * var(--mostViewedRankDetTitleTextH));
    line-height: var(--mostViewedRankDetTitleTextH);
    font-size: 18px;
    text-align: justify;
    color: var(--genWhiteTypeLight);
    -webkit-hyphens: auto;
    hyphens: auto;
    overflow-wrap: break-word;
    overflow: hidden;
}

.mostViewedRankDetBox .mostViewedRankDetTagBdr
{
    display: flex;
    flex-direction: row;
    align-items: center;
    gap: 10px;
}

.mostViewedRankDetTagBox .mostViewedRankDetTagText
{
    font-family: 'Poppins' , sans-serif;
    color: var(--color10);
    font-size: 14px;
    font-weight: 700;
}

.mostViewedRankDetTagText.mostViewedRankDetTagTextDivider
{
    font-size: 10px;
}
/* ... */

